// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot 1`] = `
<div
  className="EventNoteCard"
>
  <div
    className="Card FeedCardFrame"
    style={
      {
        "border": "1px solid #ccc",
        "borderRadius": 3,
        "padding": 10,
      }
    }
  >
    <div
      className="FeedCardFrame-FrameHeader"
      style={
        {
          "alignItems": "flex-start",
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <div
        style={
          {
            "display": "flex",
          }
        }
      >
        <div
          className="StudentPhotoCropped"
          style={
            {
              "backgroundColor": "#ddd",
              "backgroundImage": "url(/students/55/photo)",
              "backgroundPosition": "center top",
              "backgroundPositionY": -10,
              "backgroundRepeat": "no-repeat",
              "backgroundSize": "150%",
              "border": "1px solid #ddd",
              "borderRadius": 3,
              "height": 58,
              "marginRight": 10,
              "overflow": "hidden",
              "width": 58,
            }
          }
        />
        <div
          style={
            {
              "alignItems": "flex-start",
              "display": "flex",
              "flexDirection": "column",
              "justifyContent": "flex-start",
            }
          }
        >
          <div>
            <a
              href="/students/55"
              style={
                {
                  "fontWeight": "bold",
                }
              }
            >
              Mari
               
              Skywalker
            </a>
          </div>
          <div>
            9th grade
          </div>
          <div />
        </div>
      </div>
      <div
        style={
          {
            "alignItems": "flex-end",
            "display": "flex",
            "flexDirection": "column",
            "textAlign": "right",
          }
        }
      >
        <div>
          <div>
            <span>
              by 
            </span>
            <a
              className="Educator"
              href="mailto:kt@demo.studentinsights.org"
              style={
                {
                  "fontWeight": "bold",
                }
              }
            >
              Kevin Teacher
            </a>
          </div>
        </div>
        <div>
          <div>
            in 
            9th Grade Experience
          </div>
        </div>
        <div>
          <div
            className="Timestamp"
            style={{}}
          >
            14 years ago
             on 
            3/5
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        {
          "marginBottom": 20,
          "marginTop": 20,
        }
      }
    >
      <div
        className="NoteText"
        style={
          {
            "border": 0,
            "fontFamily": "'Open Sans', sans-serif",
            "fontSize": 14,
            "marginTop": 5,
            "outline": "1px solid transparent",
            "overflowX": "hidden",
            "padding": 0,
            "whiteSpace": "pre-wrap",
            "wordBreak": "break-word",
          }
        }
      >
        hello!
      </div>
    </div>
    <div
      className="FeedCardFrame-footer"
      style={
        {
          "display": "flex",
          "justifyContent": "space-between",
          "marginBottom": 5,
        }
      }
    >
      <div />
      <div>
        <span
          className="HouseBadge"
          style={
            {
              "backgroundColor": "#333",
              "color": "white",
              "marginLeft": 5,
              "opacity": 0.5,
              "padding": 5,
            }
          }
        >
          Beacon house
        </span>
        <span
          className="Badge"
          style={
            {
              "backgroundColor": "#139DEA",
              "color": "white",
              "marginLeft": 5,
              "opacity": 0.5,
              "padding": 5,
            }
          }
        >
          9th Grade Experience
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`snaphots when passing alternate children 1`] = `
<div
  className="EventNoteCard"
>
  <div
    className="Card FeedCardFrame"
    style={
      {
        "border": "1px solid #ccc",
        "borderRadius": 3,
        "padding": 10,
      }
    }
  >
    <div
      className="FeedCardFrame-FrameHeader"
      style={
        {
          "alignItems": "flex-start",
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <div
        style={
          {
            "display": "flex",
          }
        }
      >
        <div
          className="StudentPhotoCropped"
          style={
            {
              "backgroundColor": "#ddd",
              "backgroundImage": "url(/students/55/photo)",
              "backgroundPosition": "center top",
              "backgroundPositionY": -10,
              "backgroundRepeat": "no-repeat",
              "backgroundSize": "150%",
              "border": "1px solid #ddd",
              "borderRadius": 3,
              "height": 58,
              "marginRight": 10,
              "overflow": "hidden",
              "width": 58,
            }
          }
        />
        <div
          style={
            {
              "alignItems": "flex-start",
              "display": "flex",
              "flexDirection": "column",
              "justifyContent": "flex-start",
            }
          }
        >
          <div>
            <a
              href="/students/55"
              style={
                {
                  "fontWeight": "bold",
                }
              }
            >
              Mari
               
              Skywalker
            </a>
          </div>
          <div>
            9th grade
          </div>
          <div />
        </div>
      </div>
      <div
        style={
          {
            "alignItems": "flex-end",
            "display": "flex",
            "flexDirection": "column",
            "textAlign": "right",
          }
        }
      >
        <div>
          <div>
            <span>
              by 
            </span>
            <a
              className="Educator"
              href="mailto:kt@demo.studentinsights.org"
              style={
                {
                  "fontWeight": "bold",
                }
              }
            >
              Kevin Teacher
            </a>
          </div>
        </div>
        <div>
          <div>
            in 
            9th Grade Experience
          </div>
        </div>
        <div>
          <div
            className="Timestamp"
            style={{}}
          >
            14 years ago
             on 
            3/5
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        {
          "marginBottom": 20,
          "marginTop": 20,
        }
      }
    >
      <b>
        hello!
      </b>
    </div>
    <div
      className="FeedCardFrame-footer"
      style={
        {
          "display": "flex",
          "justifyContent": "space-between",
          "marginBottom": 5,
        }
      }
    >
      <div />
      <div>
        <span
          className="HouseBadge"
          style={
            {
              "backgroundColor": "#333",
              "color": "white",
              "marginLeft": 5,
              "opacity": 0.5,
              "padding": 5,
            }
          }
        >
          Beacon house
        </span>
        <span
          className="Badge"
          style={
            {
              "backgroundColor": "#139DEA",
              "color": "white",
              "marginLeft": 5,
              "opacity": 0.5,
              "padding": 5,
            }
          }
        >
          9th Grade Experience
        </span>
      </div>
    </div>
  </div>
</div>
`;
